# stellar-rec

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Plan.md  README.md  SECURITY.md
contracts/oracle-handler/: Cargo.toml
contracts/oracle-handler/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/oracle-handler/test_snapshots/test/: test_claim_rewards_direct.1.json  test_deposit_bond_activates_oracle.1.json  test_dispute_and_slashing.1.json  test_dispute_flow.1.json  test_dispute_honest_outcome_boosts_reputation.1.json  test_duplicate_oracle_rejected.1.json  test_get_nonexistent_oracle.1.json  test_pause_resume.1.json  test_register_oracle.1.json  test_revoke_oracle.1.json  test_set_meter.1.json  test_set_reward_per_reading.1.json  test_set_threshold.1.json  test_set_usdc_token_and_minimum_bond.1.json  test_submit_below_threshold_rejected.1.json  test_submit_reading_mints_token.1.json  test_submit_reading_with_bond.1.json  test_submit_reading_with_low_bond_rejected.1.json  test_submit_while_paused.1.json  test_withdraw_bond_deactivates_oracle.1.json
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/test_snapshots/tests/: test_auto_match_orders.1.json  test_burn_unauthorized_caller_rejected.1.json  test_cfd_liquidation_success_and_rejection_when_collateralized.1.json  test_cfd_settlement_full_lifecycle.1.json  test_full_cfd_settle_after_price_movement.1.json  test_full_rec_lifecycle_mint_trade_retire_verify.1.json  test_marketplace_pause_blocks_cfd_liquidation.1.json  test_marketplace_pause_blocks_trading.1.json  (+7 more)
(+64 files in other folders)
